feat: 修复系统日志筛选功能并优化代码结构
- 修复系统日志时间范围筛选不生效的问题
- 添加1小时时间范围支持
- 修复时区处理问题，使用UTC时间进行筛选
- 添加筛选器变化时自动刷新功能
- 修复SQL Server账户类型显示问题
- 添加PASSWORD_ENCRYPTION_KEY环境变量管理
- 清理无用的Celery集成文件
- 优化Redis配置和日志路径
- 添加环境部署指南和密钥管理工具

--- a/docker/redis/redis.conf
+++ b/docker/redis/redis.conf
@@ -30,7 +30,7 @@ auto-aof-rewrite-min-size 64mb
 
 # 日志配置
 loglevel notice
-logfile ""
+logfile "/Users/apple/Taifish/TaifishingV4/userdata/logs/redis/redis.log"
 
 # 慢查询日志
 slowlog-log-slower-than 10000
