feat: 在环境变量文件中添加Oracle Instant Client配置
- 在env.example中添加Oracle Instant Client配置示例
- 在app/__init__.py中自动从.env文件加载DYLD_LIBRARY_PATH
- 支持通过环境变量文件配置Oracle Instant Client路径
- 提供更灵活的Oracle环境配置方式

--- a/env.example
+++ b/env.example
@@ -41,6 +41,12 @@ ORACLE_SERVICE_NAME=ORCL
 ORACLE_USERNAME=system
 ORACLE_PASSWORD=your_oracle_password
 
+# Oracle Instant Client配置
+# 设置Oracle Instant Client库文件路径
+DYLD_LIBRARY_PATH=/Users/apple/Downloads/instantclient_23_3
+# 或者使用相对路径（如果Instant Client在项目目录中）
+# DYLD_LIBRARY_PATH=./oracle/instantclient_23_3
+
 # 应用配置
 APP_NAME=泰摸鱼吧
 APP_VERSION=1.0.0
