fix: 统一Oracle驱动使用，确保只使用cx_Oracle
- 取消注释requirements.txt中的cx-Oracle==8.3.0
- 确认项目中只使用cx_Oracle驱动，没有使用oracledb
- 验证Oracle Instant Client配置正确
- 确保Oracle驱动使用的一致性

--- a/requirements.txt
+++ b/requirements.txt
@@ -16,7 +16,7 @@ alembic==1.16.5
 PyMySQL==1.1.1
 pymssql==2.3.7
 pyodbc==5.1.0
-# cx-Oracle==8.3.0  # 需要Oracle客户端，暂时注释
+cx-Oracle==8.3.0  # Oracle驱动，需要Oracle Instant Client
 
 # 缓存
 redis==5.0.7
