--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,8 +19,8 @@ dependencies = [
     
     # 数据库驱动
     "PyMySQL==1.1.1",
-    # "pymssql>=2.2.0,<3.0.0",  # 暂时注释，Python 3.13兼容性问题
-    # "pyodbc>=5.0.0,<6.0.0",  # 暂时注释，Python 3.13兼容性问题
+    "pymssql>=2.2.0,<3.0.0",
+    "pyodbc>=5.0.0,<6.0.0",
     "oracledb==3.3.0",
     
     # 缓存
