--- a/docker/redis/redis.conf
+++ b/docker/redis/redis.conf
@@ -1,48 +1,77 @@
-# 泰摸鱼吧 - Redis配置文件
+# Redis配置文件 - 生产环境优化
+# 基于Redis 7的配置
 
 # 网络配置
 bind 0.0.0.0
 port 6379
 timeout 300
-tcp-keepalive 60
+tcp-keepalive 300
 
-# 安全配置
-requirepass taifish_redis_pass
-rename-command FLUSHDB ""
-rename-command FLUSHALL ""
-rename-command DEBUG ""
-
-# 内存配置
-maxmemory 256mb
-maxmemory-policy allkeys-lru
+# 通用配置
+daemonize no
+supervised no
+pidfile /var/run/redis_6379.pid
+loglevel notice
+logfile ""
+databases 16
 
 # 持久化配置
 save 900 1
 save 300 10
 save 60 10000
+stop-writes-on-bgsave-error yes
+rdbcompression yes
+rdbchecksum yes
+dbfilename dump.rdb
+dir /data
 
 # AOF配置
 appendonly yes
+appendfilename "appendonly.aof"
 appendfsync everysec
 no-appendfsync-on-rewrite no
 auto-aof-rewrite-percentage 100
 auto-aof-rewrite-min-size 64mb
+aof-load-truncated yes
+aof-use-rdb-preamble yes
 
-# 日志配置
-loglevel notice
-logfile "/Users/apple/Taifish/TaifishingV4/userdata/logs/redis/redis.log"
+# 内存管理
+maxmemory 256mb
+maxmemory-policy allkeys-lru
+maxmemory-samples 5
+
+# 安全配置
+requirepass Taifish2024!
+
+# 客户端配置
+maxclients 10000
 
 # 慢查询日志
 slowlog-log-slower-than 10000
 slowlog-max-len 128
 
-# 客户端配置
-maxclients 10000
+# 延迟监控
+latency-monitor-threshold 100
 
-# 数据库配置
-databases 16
+# 事件通知
+notify-keyspace-events ""
 
-# 其他配置
-stop-writes-on-bgsave-error yes
-rdbcompression yes
-rdbchecksum yes
+# 高级配置
+hash-max-ziplist-entries 512
+hash-max-ziplist-value 64
+list-max-ziplist-size -2
+list-compress-depth 0
+set-max-intset-entries 512
+zset-max-ziplist-entries 128
+zset-max-ziplist-value 64
+hll-sparse-max-bytes 3000
+stream-node-max-bytes 4096
+stream-node-max-entries 100
+activerehashing yes
+client-output-buffer-limit normal 0 0 0
+client-output-buffer-limit replica 256mb 64mb 60
+client-output-buffer-limit pubsub 32mb 8mb 60
+hz 10
+dynamic-hz yes
+aof-rewrite-incremental-fsync yes
+rdb-save-incremental-fsync yes
