feat: 实现数据库类型抽象管理功能
- 创建DatabaseTypeConfig模型，支持动态数据库类型配置
- 实现数据库类型管理服务，提供完整的CRUD操作
- 创建数据库类型管理界面，支持添加、编辑、删除、状态切换
- 添加数据库迁移脚本，创建database_type_configs表
- 更新导航菜单，添加数据库类型管理入口
- 初始化默认数据库类型：MySQL、PostgreSQL、SQL Server、Oracle
- 支持特性标签、排序、系统保护等高级功能
- 修复SQLite JSON字段存储问题
- 完善错误处理和日志记录

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -86,6 +86,7 @@ dependencies = [
     "cffi==1.17.1",
     "blinker==1.9.0",
     "apscheduler==3.10.4",
+    "bleach>=6.2.0",
 ]
 
 [project.optional-dependencies]
