--- a/pyproject.toml
+++ b/pyproject.toml
@@ -87,6 +87,7 @@ dependencies = [
     "blinker==1.9.0",
     "apscheduler==3.10.4",
     "bleach>=6.2.0",
+    "pyyaml>=6.0.2",
 ]
 
 [project.optional-dependencies]
