feat: 完成统一日志系统迁移
- 重构整个日志体系，使用 structlog 替代旧日志系统
- 新增统一日志模型 (UnifiedLog) 和数据库表
- 实现结构化日志记录，支持 JSON 格式存储
- 集成时区处理，确保日志时间显示正确
- 添加日志详情查看、上下文显示、堆栈跟踪功能
- 实现动态 DEBUG 日志级别控制
- 简化 HTTP 请求日志，只保留批量同步日志合并
- 迁移所有路由和服务到新的统一日志系统
- 添加日志清理和导出功能
- 完善日志监控和统计功能

主要变更:
- 新增: app/models/unified_log.py - 统一日志数据模型
- 新增: app/utils/structlog_config.py - structlog 配置
- 新增: app/templates/logs/unified_logs.html - 统一日志界面
- 修改: 所有路由文件迁移到统一日志系统
- 修改: 所有服务文件迁移到统一日志系统
- 修改: 中间件简化 HTTP 日志记录
- 新增: 相关文档和示例代码

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -32,6 +32,8 @@ dependencies = [
     "oracledb>=1.4.2",
     "pyodbc>=5.0.1",
     "flask-bcrypt>=1.0.1",
+    "loguru>=0.7.3",
+    "structlog>=25.4.0",
 ]
 
 [project.optional-dependencies]
