--- a/pyproject.toml
+++ b/pyproject.toml
@@ -34,6 +34,7 @@ dependencies = [
     "flask-bcrypt>=1.0.1",
     "loguru>=0.7.3",
     "structlog>=25.4.0",
+    "psycopg[binary]>=3.2.10",
 ]
 
 [project.optional-dependencies]
