feat: 添加数据库文件到版本控制
- 将主数据库文件 taifish_dev.db 添加到版本控制
- 将定时任务数据库文件 scheduler.db 添加到版本控制
- 更新 .gitignore 允许数据库文件上传，但排除日志和备份文件
- 排除 *.db-shm 和 *.db-wal 临时文件
- 排除 userdata/logs/ 和 userdata/backups/ 目录

--- a/.gitignore
+++ b/.gitignore
@@ -36,10 +36,10 @@ venv.bak/
 .env.production.local
 
 # Database
-*.db
-*.sqlite
-*.sqlite3
-userdata/
+*.db-shm
+*.db-wal
+userdata/logs/
+userdata/backups/
 migrations/versions/*.py
 
 # Logs
