完成自动分类功能性能优化
- 清理重复代码，移除冗余逻辑
- 实现批量查询优化，解决N+1查询问题
- 预分组规则，避免重复过滤和排序
- 按数据库类型分组处理账户
- 批量查询分类分配和分类信息
- 大幅提升自动分类性能，从O(n²)降低到O(n)
- 解决数据库卡死问题
- 优化PostgreSQL权限映射规则
- 完善错误处理和日志记录

--- a/config/database_filters.yaml
+++ b/config/database_filters.yaml
@@ -13,11 +13,10 @@ database_filters:
     exclude_roles: []
     include_only: false
     custom_rules: []
-    
+
   postgresql:
     description: "PostgreSQL数据库过滤规则"
     exclude_users:
-      - postgres
       - rdsadmin
       - rds_superuser
     exclude_patterns:
@@ -25,7 +24,9 @@ database_filters:
     exclude_roles: []
     include_only: false
     custom_rules: []
-    
+    # 特殊处理：postgres用户虽然以pg开头，但应该被包含
+    # 在代码中会特殊处理postgres用户
+
   sqlserver:
     description: "SQL Server数据库过滤规则"
     exclude_users:
@@ -41,7 +42,7 @@ database_filters:
     exclude_roles: []
     include_only: false
     custom_rules: []
-    
+
   oracle:
     description: "Oracle数据库过滤规则"
     exclude_users:
