--- a/pyproject.toml
+++ b/pyproject.toml
@@ -35,6 +35,7 @@ dependencies = [
     "loguru>=0.7.3",
     "structlog>=25.4.0",
     "psycopg[binary]>=3.2.10",
+    "requests>=2.32.5",
 ]
 
 [project.optional-dependencies]
