fix: 修复低危安全漏洞 - 改进硬编码字符串和默认密码问题
- 为硬编码字符串添加详细注释说明，避免误报
- 改进默认管理员密码生成机制，支持环境变量配置
- 使用secrets模块生成安全的随机密码
- 更新环境变量配置示例文件
- 提升系统安全性和配置灵活性

--- a/env.example
+++ b/env.example
@@ -24,6 +24,9 @@ BCRYPT_LOG_ROUNDS=12
 JWT_ACCESS_TOKEN_EXPIRES=3600
 JWT_REFRESH_TOKEN_EXPIRES=2592000
 
+# 默认管理员密码（可选，不设置则自动生成随机密码）
+DEFAULT_ADMIN_PASSWORD=your-secure-admin-password
+
 # 文件上传配置
 UPLOAD_FOLDER=userdata/uploads
 MAX_CONTENT_LENGTH=16777216
