--- a/.gitignore
+++ b/.gitignore
@@ -38,8 +38,8 @@ venv.bak/
 # Database
 *.db-shm
 *.db-wal
-userdata/logs/
-userdata/backups/
+# 用户数据目录 - 包含日志、备份、上传文件等
+userdata/
 migrations/versions/*.py
 
 # Logs
