🔧 统一配置和清理项目结构
主要更改:
- 统一配置文件: 合并config_prod.py到config.py
- 重命名标识: taifish -> whalefall
- 清理Docker配置: 只保留生产环境配置
- 删除开发环境文件: 简化项目结构
- 添加userdata到.gitignore: 避免上传用户数据

文件变更:
- 删除: config_prod.py, Dockerfile.prod, docker-compose.prod.yml
- 重命名: nginx/conf.d/taifish.conf -> whalefall.conf
- 统一: 所有taifish标识改为whalefall
- 清理: 删除开发环境相关文件和文档

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -98,7 +98,7 @@ jobs:
         file: ./docker/Dockerfile
         push: true
         tags: |
-          nyealovey/taifishingv4:latest
-          nyealovey/taifishingv4:${{ github.sha }}
+          nyealovey/whalefallingv4:latest
+          nyealovey/whalefallingv4:${{ github.sha }}
         cache-from: type=gha
         cache-to: type=gha,mode=max
