--- a/env.example
+++ b/env.example
@@ -1,4 +1,4 @@
-# 鲸落 - 环境变量配置示例
+# 鲸落 - 环境配置示例
 # 复制此文件为 .env 并修改相应的值
 
 # 应用配置
@@ -8,7 +8,7 @@ SECRET_KEY=your-secret-key-change-in-production
 JWT_SECRET_KEY=your-jwt-secret-change-in-production
 
 # 数据库配置
-DATABASE_URL=postgresql://taifish_user:Taifish2024!@localhost:5432/taifish_dev
+DATABASE_URL=postgresql://whalefall_user:Taifish2024!@localhost:5432/whalefall_dev
 
 # Redis配置
 REDIS_URL=redis://:Taifish2024!@localhost:6379/0
