--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,9 +1,9 @@
 [project]
-name = "taifishingv4"
+name = "whalefallingv4"
 version = "0.1.0"
 description = "鲸落 - DBA数据库管理Web应用"
 authors = [
-    {name = "TaifishingV4 Team", email = "team@taifishing.com"}
+    {name = "TaifishingV4 Team", email = "team@whalefalling.com"}
 ]
 readme = "README.md"
 requires-python = ">=3.13"
