--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,69 +1,147 @@
 version: '3.8'
 
 services:
-  # PostgreSQL数据库 - 开发环境
-  postgres:
-    image: postgres:15-alpine
-    container_name: taifish_postgres_dev
+  # 主程序
+  whalefall:
+    image: whalefall:latest
+    container_name: whalefall_app
     restart: unless-stopped
     environment:
-      POSTGRES_DB: taifish_dev
-      POSTGRES_USER: taifish_user
-      POSTGRES_PASSWORD: Taifish2024!
-      POSTGRES_INITDB_ARGS: "--encoding=UTF-8 --lc-collate=C --lc-ctype=C"
+      - FLASK_APP=app.py
+      - FLASK_ENV=production
+      - DATABASE_URL=postgresql://whalefall_user:${POSTGRES_PASSWORD}@postgres:5432/${POSTGRES_DB}
+      - REDIS_URL=redis://:${REDIS_PASSWORD}@redis:6379/0
+      - SECRET_KEY=${SECRET_KEY}
+      - JWT_SECRET_KEY=${JWT_SECRET_KEY}
+      - BCRYPT_LOG_ROUNDS=${BCRYPT_LOG_ROUNDS}
+      - LOG_LEVEL=${LOG_LEVEL}
+    env_file:
+      - .env
     volumes:
-      - postgres_dev_data:/var/lib/postgresql/data
-      - ./docker/postgres/init_dev.sql:/docker-entrypoint-initdb.d/init.sql:ro
-      - ./docker/postgres/postgresql_dev.conf:/etc/postgresql/postgresql.conf:ro
-    ports:
-      - "5432:5432"
+      - whalefall_data:/app/userdata
+      - whalefall_logs:/app/userdata/logs
+    depends_on:
+      postgres:
+        condition: service_healthy
+      redis:
+        condition: service_healthy
     networks:
-      - taifish_dev_network
+      - whalefall_network
     healthcheck:
-      test: ["CMD-SHELL", "pg_isready -U taifish_user -d taifish_dev"]
+      test: ["CMD", "curl", "-f", "http://localhost:5000/health"]
+      interval: 30s
+      timeout: 10s
+      retries: 3
+      start_period: 60s
+    deploy:
+      resources:
+        limits:
+          memory: 1G
+          cpus: '1.0'
+        reservations:
+          memory: 512M
+          cpus: '0.5'
+
+  # PostgreSQL数据库
+  postgres:
+    image: postgres:15-alpine
+    container_name: whalefall_postgres
+    restart: unless-stopped
+    environment:
+      - POSTGRES_DB=${POSTGRES_DB}
+      - POSTGRES_USER=${POSTGRES_USER}
+      - POSTGRES_PASSWORD=${POSTGRES_PASSWORD}
+      - POSTGRES_INITDB_ARGS=--encoding=UTF-8 --lc-collate=C --lc-ctype=C
+    volumes:
+      - postgres_data:/var/lib/postgresql/data
+      - ./sql/init_postgresql.sql:/docker-entrypoint-initdb.d/init.sql:ro
+    networks:
+      - whalefall_network
+    healthcheck:
+      test: ["CMD-SHELL", "pg_isready -U ${POSTGRES_USER} -d ${POSTGRES_DB}"]
       interval: 10s
       timeout: 5s
       retries: 5
-    command: >
-      postgres
-      -c shared_preload_libraries=pg_stat_statements
-      -c pg_stat_statements.track=all
-      -c log_statement=all
-      -c log_min_duration_statement=1000
-      -c log_line_prefix='%t [%p]: [%l-1] user=%u,db=%d,app=%a,client=%h '
-      -c max_connections=100
-      -c shared_buffers=256MB
-      -c effective_cache_size=1GB
-      -c maintenance_work_mem=64MB
-      -c checkpoint_completion_target=0.9
-      -c wal_buffers=16MB
-      -c default_statistics_target=100
+      start_period: 30s
+    deploy:
+      resources:
+        limits:
+          memory: 512M
+          cpus: '0.5'
+        reservations:
+          memory: 256M
+          cpus: '0.25'
 
-  # Redis缓存 - 开发环境
+  # Redis缓存
   redis:
     image: redis:7-alpine
-    container_name: taifish_redis_dev
+    container_name: whalefall_redis
     restart: unless-stopped
-    command: redis-server --appendonly yes --requirepass Taifish2024! --maxmemory 128mb --maxmemory-policy allkeys-lru
+    command: redis-server --requirepass ${REDIS_PASSWORD} --appendonly yes
     volumes:
-      - redis_dev_data:/data
-      - ./docker/redis/redis.conf:/usr/local/etc/redis/redis.conf:ro
-    ports:
-      - "6379:6379"
+      - redis_data:/data
     networks:
-      - taifish_dev_network
+      - whalefall_network
     healthcheck:
       test: ["CMD", "redis-cli", "--raw", "incr", "ping"]
       interval: 10s
       timeout: 3s
       retries: 5
+      start_period: 30s
+    deploy:
+      resources:
+        limits:
+          memory: 256M
+          cpus: '0.25'
+        reservations:
+          memory: 128M
+          cpus: '0.1'
+
+  # Nginx反向代理
+  nginx:
+    image: nginx:alpine
+    container_name: whalefall_nginx
+    restart: unless-stopped
+    ports:
+      - "80:80"
+      - "443:443"
+    volumes:
+      - ./nginx/conf.d:/etc/nginx/conf.d:ro
+      - nginx_logs:/var/log/nginx
+      - nginx_ssl:/etc/nginx/ssl:ro
+    depends_on:
+      - whalefall
+    networks:
+      - whalefall_network
+    healthcheck:
+      test: ["CMD", "curl", "-f", "http://localhost/health"]
+      interval: 30s
+      timeout: 10s
+      retries: 3
+      start_period: 30s
+    deploy:
+      resources:
+        limits:
+          memory: 128M
+          cpus: '0.25'
+        reservations:
+          memory: 64M
+          cpus: '0.1'
 
 volumes:
-  postgres_dev_data:
+  whalefall_data:
     driver: local
-  redis_dev_data:
+  whalefall_logs:
+    driver: local
+  postgres_data:
+    driver: local
+  redis_data:
+    driver: local
+  nginx_logs:
+    driver: local
+  nginx_ssl:
     driver: local
 
 networks:
-  taifish_dev_network:
+  whalefall_network:
     driver: bridge
