--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -18,8 +18,8 @@ services:
     env_file:
       - .env
     volumes:
-      - whalefall_data:/app/userdata
-      - whalefall_logs:/app/userdata/logs
+      - /opt/whale_fall_data/app:/app/userdata
+      - /opt/whale_fall_data/logs:/app/userdata/logs
     depends_on:
       postgres:
         condition: service_healthy
@@ -53,7 +53,7 @@ services:
       - POSTGRES_PASSWORD=${POSTGRES_PASSWORD}
       - POSTGRES_INITDB_ARGS=--encoding=UTF-8 --lc-collate=C --lc-ctype=C
     volumes:
-      - postgres_data:/var/lib/postgresql/data
+      - /opt/whale_fall_data/postgres:/var/lib/postgresql/data
       - ./sql/init_postgresql.sql:/docker-entrypoint-initdb.d/init.sql:ro
     networks:
       - whalefall_network
@@ -79,7 +79,7 @@ services:
     restart: unless-stopped
     command: redis-server --requirepass ${REDIS_PASSWORD} --appendonly yes
     volumes:
-      - redis_data:/data
+      - /opt/whale_fall_data/redis:/data
     networks:
       - whalefall_network
     healthcheck:
@@ -107,8 +107,8 @@ services:
       - "443:443"
     volumes:
       - ./nginx/conf.d:/etc/nginx/conf.d:ro
-      - nginx_logs:/var/log/nginx
-      - nginx_ssl:/etc/nginx/ssl:ro
+      - /opt/whale_fall_data/nginx/logs:/var/log/nginx
+      - /opt/whale_fall_data/nginx/ssl:/etc/nginx/ssl:ro
     depends_on:
       - whalefall
     networks:
@@ -128,19 +128,8 @@ services:
           memory: 64M
           cpus: '0.1'
 
-volumes:
-  whalefall_data:
-    driver: local
-  whalefall_logs:
-    driver: local
-  postgres_data:
-    driver: local
-  redis_data:
-    driver: local
-  nginx_logs:
-    driver: local
-  nginx_ssl:
-    driver: local
+# 所有持久数据统一存储在 /opt/whale_fall_data 目录
+# 不再使用Docker volumes，直接使用主机目录挂载
 
 networks:
   whalefall_network:
