feat: 完成Nginx代理配置和logo WebP格式更新
- 修复Nginx配置中的健康检查路径问题
- 更新Docker Compose配置，使用端口映射替代host网络模式
- 将logo从PNG格式更新为WebP格式，优化加载性能
- 删除重复的Nginx配置文件
- 修复Docker Compose版本问题，确保端口映射正常工作
- 更新相关模板文件中的logo引用

现在可以通过 http://localhost 和 https://localhost 访问应用

--- a/nginx/local/conf.d/whalefall.conf
+++ b/nginx/local/conf.d/whalefall.conf
@@ -2,10 +2,10 @@
 # 代理到本地运行的 Flask 应用 (localhost:5001)
 
 upstream whalefall_backend {
-    # 使用 host.docker.internal 访问宿主机服务
-    server host.docker.internal:5001;
+    # 直接使用宿主机IP访问Flask应用
+    server 127.0.0.1:5001;
     # 备用服务器（如果主服务器不可用）
-    server 127.0.0.1:5001 backup;
+    server host.docker.internal:5001 backup;
 }
 
 # HTTP 服务器配置
@@ -50,7 +50,7 @@ server {
     
     # 健康检查
     location /health {
-        proxy_pass http://whalefall_backend;
+        proxy_pass http://whalefall_backend/health/health;
         access_log off;
     }
     
@@ -145,7 +145,7 @@ server {
     
     # 健康检查
     location /health {
-        proxy_pass http://whalefall_backend;
+        proxy_pass http://whalefall_backend/health/health;
         access_log off;
     }
     
