feat: 完善生产环境部署和问题修复
主要更新:
- 修复数据库字段缺失问题 (last_sync_time, last_change_type, last_change_time, deleted_time)
- 修复Nginx 502 Bad Gateway错误 (upstream配置指向host.docker.internal)
- 修复PERMANENT_SESSION_LIFETIME环境变量配置问题
- 完善生产环境部署方案 (两部分部署: 基础环境 + Flask应用)
- 清理无用脚本和文档，重新组织项目结构
- 添加Nginx配置切换脚本支持主机/容器Flask模式
- 更新数据库初始化脚本和迁移脚本
- 修复循环导入问题 (password_manager.py)
- 优化会话管理和安全配置

新增文件:
- docker-compose.base.yml: 基础环境部署 (PostgreSQL, Redis, Nginx)
- docker-compose.flask.yml: Flask应用部署
- docker-compose.full.yml: 完整环境部署
- scripts/switch-nginx-config.sh: Nginx配置切换脚本
- sql/migrate_add_missing_fields.sql: 数据库字段迁移脚本
- 多个修复总结文档和部署指南

删除文件:
- 清理了过时的部署文档和脚本
- 移除了重复的配置文件

技术改进:
- 支持macOS Docker Desktop网络配置
- 完善错误处理和日志记录
- 优化数据库表结构和索引
- 增强安全性和可维护性

--- a/nginx/conf.d/whalefall-docker.conf
+++ b/nginx/conf.d/whalefall-docker.conf
@@ -1,5 +1,17 @@
+# Flask容器化后的Nginx配置
+# 适用于Flask应用运行在Docker容器中的场景
+
 upstream whalefall_backend {
-    server host.docker.internal:5001;
+    # 方案1：使用容器名（推荐）
+    server whalefall_app:5001;
+    
+    # 方案2：使用服务名（如果使用docker-compose up同时启动）
+    # server whalefall:5001;
+    
+    # 方案3：负载均衡（多个Flask实例）
+    # server whalefall_app_1:5001;
+    # server whalefall_app_2:5001;
+    # server whalefall_app_3:5001;
 }
 
 server {
