--- a/docker-compose.full.yml
+++ b/docker-compose.full.yml
@@ -100,13 +100,7 @@ services:
     networks:
       - whalefall_network
     depends_on:
-      whalefall:
-        condition: service_healthy
-    healthcheck:
-      test: ["CMD", "wget", "--quiet", "--tries=1", "--spider", "http://localhost/health"]
-      interval: 30s
-      timeout: 10s
-      retries: 3
+      - whalefall
 
 networks:
   whalefall_network:
