统一缓存系统：使用Flask-Caching替代直接Redis连接
- 修改速率限制器使用Flask-Caching而不是直接Redis连接
- 创建简化缓存管理器使用Flask-Caching
- 修改app/__init__.py移除直接Redis连接，统一使用Flask-Caching
- 修改dashboard.py和main.py中的Redis状态检查使用新的缓存管理器
- 修复健康检查中的SQL语句问题（使用text()包装）
- 修改Docker Compose文件移除硬编码密码，使用环境变量
- 更新环境变量配置文件，确保所有配置都在env文件中
- 添加pyyaml依赖到pyproject.toml
- 更新Dockerfile和启动脚本

--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -72,13 +72,14 @@ services:
       - "80:80"
       - "443:443"
     volumes:
-      - ./nginx/conf.d/whalefall-docker.conf:/etc/nginx/conf.d/default.conf:ro
+      - ./nginx/conf.d/whalefall.conf:/etc/nginx/conf.d/default.conf:ro
       - ./userdata/nginx/logs:/var/log/nginx
       - ./userdata/nginx/ssl:/etc/nginx/ssl:ro
     networks:
       - whalefall_dev_network
-    depends_on:
-      - whalefall
+    # 基础环境中不依赖whalefall服务
+    # depends_on:
+    #   - whalefall
     deploy:
       resources:
         limits:
@@ -103,8 +104,11 @@ services:
       - FLASK_APP=app.py
       - FLASK_ENV=development
       - FLASK_DEBUG=1
-      - DATABASE_URL=postgresql://${POSTGRES_USER:-whalefall_user}:${POSTGRES_PASSWORD}@postgres:5432/${POSTGRES_DB:-whalefall_dev}
-      - REDIS_URL=redis://:${REDIS_PASSWORD}@redis:6379/0
+      - FLASK_HOST=0.0.0.0
+      - FLASK_PORT=5001
+      - DATABASE_URL=${DATABASE_URL}
+      - CACHE_TYPE=${CACHE_TYPE}
+      - CACHE_REDIS_URL=${CACHE_REDIS_URL}
       - SECRET_KEY=${SECRET_KEY}
       - JWT_SECRET_KEY=${JWT_SECRET_KEY}
       - BCRYPT_LOG_ROUNDS=${BCRYPT_LOG_ROUNDS:-12}
