--- a/nginx/conf.d/whalefall.conf
+++ b/nginx/conf.d/whalefall.conf
@@ -9,8 +9,9 @@ server {
     # 客户端最大请求体大小
     client_max_body_size 16M;
     
-    # 代理配置
+    # 默认页面（当Flask应用未启动时）
     location / {
+        # 尝试代理到Flask应用
         proxy_pass http://whalefall_backend;
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
@@ -18,9 +19,13 @@ server {
         proxy_set_header X-Forwarded-Proto $scheme;
         
         # 超时配置
-        proxy_connect_timeout 60s;
-        proxy_send_timeout 60s;
-        proxy_read_timeout 60s;
+        proxy_connect_timeout 5s;
+        proxy_send_timeout 5s;
+        proxy_read_timeout 5s;
+        
+        # 当后端不可用时，返回503状态
+        proxy_intercept_errors on;
+        error_page 502 503 504 = @fallback;
     }
     
     # 静态文件缓存
@@ -28,6 +33,21 @@ server {
         proxy_pass http://whalefall_backend;
         expires 1y;
         add_header Cache-Control "public, immutable";
+        proxy_intercept_errors on;
+        error_page 502 503 504 = @fallback;
+    }
+    
+    # 健康检查
+    location /health {
+        access_log off;
+        return 200 "Nginx is running\n";
+        add_header Content-Type text/plain;
+    }
+    
+    # 回退页面
+    location @fallback {
+        return 503 "Service temporarily unavailable. Please wait for Flask application to start.\n";
+        add_header Content-Type text/plain;
     }
 }
 
