--- a/pyproject.toml
+++ b/pyproject.toml
@@ -36,6 +36,7 @@ dependencies = [
     "structlog>=25.4.0",
     "psycopg[binary]>=3.2.10",
     "requests>=2.32.5",
+    "pyyaml>=6.0.1",
 ]
 
 [project.optional-dependencies]
