--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -107,8 +107,11 @@ services:
       - FLASK_APP=app.py
       - FLASK_ENV=production
       - FLASK_DEBUG=0
-      - DATABASE_URL=postgresql://${POSTGRES_USER:-whalefall_user}:${POSTGRES_PASSWORD}@postgres:5432/${POSTGRES_DB:-whalefall_prod}
-      - REDIS_URL=redis://:${REDIS_PASSWORD}@redis:6379/0
+      - FLASK_HOST=0.0.0.0
+      - FLASK_PORT=5001
+      - DATABASE_URL=${DATABASE_URL}
+      - CACHE_TYPE=${CACHE_TYPE}
+      - CACHE_REDIS_URL=${CACHE_REDIS_URL}
       - SECRET_KEY=${SECRET_KEY}
       - JWT_SECRET_KEY=${JWT_SECRET_KEY}
       - BCRYPT_LOG_ROUNDS=${BCRYPT_LOG_ROUNDS:-12}
