--- a/Dockerfile.proxy
+++ b/Dockerfile.proxy
@@ -32,7 +32,7 @@ RUN apt-get update && apt-get install -y \
     && add-apt-repository ppa:deadsnakes/ppa \
     && apt-get update && apt-get install -y \
     python3.11 \
-    python3.11-pip \
+    python3.11-distutils \
     python3.11-venv \
     python3.11-dev \
     build-essential \
