--- a/Dockerfile.proxy
+++ b/Dockerfile.proxy
@@ -79,14 +79,14 @@ RUN if [ -n "$HTTP_PROXY" ]; then \
     else \
         curl -LsSf https://astral.sh/uv/install.sh | sh; \
     fi
-ENV PATH="/root/.cargo/bin:$PATH"
+ENV PATH="/root/.local/bin:$PATH"
 
 # 创建非root用户
 RUN useradd -m -s /bin/bash whalefall && \
     chown -R whalefall:whalefall /app
 
-# 复制uv到whalefall用户目录
-RUN cp /root/.cargo/bin/uv /usr/local/bin/uv && \
+# 复制uv到系统目录
+RUN cp /root/.local/bin/uv /usr/local/bin/uv && \
     chmod +x /usr/local/bin/uv
 
 # 切换到非root用户
