移除uv config命令，使用环境变量进行代理配置
- 删除不存在的uv config set命令
- uv会自动使用HTTP_PROXY和HTTPS_PROXY环境变量
- 简化代理配置，避免命令错误

--- a/Dockerfile.proxy
+++ b/Dockerfile.proxy
@@ -97,11 +97,7 @@ RUN uv venv /app/.venv
 ENV PATH="/app/.venv/bin:$PATH"
 
 # 配置uv代理（如果设置了代理）
-RUN if [ -n "$HTTP_PROXY" ]; then \
-        uv config set global.index-url https://pypi.org/simple/ && \
-        uv config set global.extra-index-url https://pypi.org/simple/ && \
-        uv config set global.proxy "$HTTP_PROXY"; \
-    fi
+# uv使用环境变量进行代理配置，不需要config命令
 
 # 复制项目配置文件
 COPY --chown=whalefall:whalefall pyproject.toml uv.lock /app/
