修复Dockerfile.proxy中README.md文件缺失问题
- 在uv sync之前复制README.md文件
- 解决pyproject.toml中readme字段引用README.md导致的构建失败
- 保持Dockerfile不变（顺序正确）

--- a/Dockerfile.proxy
+++ b/Dockerfile.proxy
@@ -102,6 +102,9 @@ ENV PATH="/app/.venv/bin:$PATH"
 # 复制项目配置文件
 COPY --chown=whalefall:whalefall pyproject.toml uv.lock /app/
 
+# 复制README.md文件（pyproject.toml需要）
+COPY --chown=whalefall:whalefall README.md /app/
+
 # 安装Python依赖（使用代理）
 RUN uv sync --frozen --no-dev
 
