修复生产环境supervisor用户权限问题
- 在生产环境阶段添加USER root指令
- 确保supervisor以root用户运行，与配置一致
- 解决supervisor配置user=root但容器以whalefall用户运行的冲突
- 同时修复Dockerfile和Dockerfile.proxy

--- a/Dockerfile.proxy
+++ b/Dockerfile.proxy
@@ -233,5 +233,8 @@ CMD ["python", "app.py"]
 # 生产环境阶段
 FROM base as production
 
+# 切换到root用户运行supervisor
+USER root
+
 # 启动命令 - 使用Supervisor管理多个进程
 CMD ["/usr/bin/supervisord", "-c", "/app/supervisord.conf"]
