修复SSL路径映射和启用HTTPS配置
- 修复docker-compose.yml中SSL路径映射错误
- 启用nginx HTTPS配置
- 创建SSL证书文件whale.pem和whale.key
- 统一使用./userdata/nginx/ssl路径映射

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -107,8 +107,8 @@ services:
       - "443:443"
     volumes:
       - ./nginx/conf.d:/etc/nginx/conf.d:ro
-      - /opt/whale_fall_data/nginx/logs:/var/log/nginx
-      - /opt/whale_fall_data/nginx/ssl:/etc/nginx/ssl:ro
+      - ./userdata/nginx/logs:/var/log/nginx
+      - ./userdata/nginx/ssl:/etc/nginx/ssl:ro
     depends_on:
       - whalefall
     networks:
