--- a/pyproject.toml
+++ b/pyproject.toml
@@ -32,6 +32,7 @@ dependencies = [
     "oracledb>=1.4.2",
     "pyodbc>=5.0.1",
     "flask-bcrypt>=1.0.1",
+    "gunicorn>=21.2.0",
     "loguru>=0.7.3",
     "structlog>=25.4.0",
     "psycopg[binary]>=3.2.10",
