修复Nginx HTTP/2配置警告
- 将 'listen 443 ssl http2' 改为 'listen 443 ssl; http2 on;'
- 消除Nginx配置警告信息

--- a/nginx/conf.d/whalefall-docker.conf
+++ b/nginx/conf.d/whalefall-docker.conf
@@ -67,7 +67,8 @@ server {
 
 # HTTPS配置
 server {
-    listen 443 ssl http2;
+    listen 443 ssl;
+    http2 on;
     server_name localhost;
     
     # SSL证书配置
