修复supervisor配置文件路径问题
- 将supervisor配置文件从/app/supervisord.conf移动到/etc/supervisor/conf.d/whalefall.conf
- 修复supervisorctl无法找到配置的问题
- 确保supervisor能正确管理Flask应用和scheduler进程
- 同时修复Dockerfile和Dockerfile.proxy

--- a/Dockerfile.proxy
+++ b/Dockerfile.proxy
@@ -165,7 +165,7 @@ limit_request_field_size = 8190
 EOF
 
 # 创建Supervisor配置文件
-RUN cat > /app/supervisord.conf << 'EOF'
+RUN cat > /etc/supervisor/conf.d/whalefall.conf << 'EOF'
 [supervisord]
 nodaemon=true
 user=root
@@ -237,4 +237,4 @@ FROM base as production
 USER root
 
 # 启动命令 - 使用Supervisor管理多个进程
-CMD ["/usr/bin/supervisord", "-c", "/app/supervisord.conf"]
+CMD ["/usr/bin/supervisord", "-c", "/etc/supervisor/supervisord.conf"]
