修复supervisor配置目录权限问题
- 在base阶段创建/etc/supervisor/conf.d目录
- 设置正确的目录权限755
- 解决Permission denied错误
- 同时修复Dockerfile和Dockerfile.proxy

--- a/Dockerfile.proxy
+++ b/Dockerfile.proxy
@@ -114,6 +114,10 @@ COPY --chown=whalefall:whalefall . /app/
 # 创建必要的目录
 RUN mkdir -p /app/userdata/logs /app/userdata/exports /app/userdata/backups /app/userdata/uploads
 
+# 创建supervisor配置目录
+RUN mkdir -p /etc/supervisor/conf.d
+RUN chmod 755 /etc/supervisor/conf.d
+
 # 设置权限
 RUN chmod -R 755 /app/userdata
 
