修复Docker镜像拉取问题
- 使用阿里云镜像源 registry.cn-hangzhou.aliyuncs.com/library/ubuntu:22.04
- 解决403 Forbidden错误
- 提高国内网络环境下的构建成功率

--- a/Dockerfile.proxy
+++ b/Dockerfile.proxy
@@ -1,5 +1,5 @@
 # 支持代理的Dockerfile
-FROM ubuntu:22.04 as base
+FROM registry.cn-hangzhou.aliyuncs.com/library/ubuntu:22.04 as base
 
 # 设置环境变量
 ENV DEBIAN_FRONTEND=noninteractive
