--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -1,5 +1,18 @@
 # 本地开发环境配置（macOS，无代理）
 # 包含：PostgreSQL、Redis、Nginx、Flask应用
+# 使用命名卷进行数据持久化
+
+volumes:
+  whalefall_postgres_data:
+    driver: local
+  whalefall_redis_data:
+    driver: local
+  whalefall_nginx_logs:
+    driver: local
+  whalefall_nginx_ssl:
+    driver: local
+  whalefall_app_data:
+    driver: local
 
 services:
   # PostgreSQL数据库
@@ -15,8 +28,7 @@ services:
     ports:
       - "5432:5432"
     volumes:
-      - ./userdata/postgres:/var/lib/postgresql/data
-      - ./sql:/docker-entrypoint-initdb.d:ro
+      - whalefall_postgres_data:/var/lib/postgresql/data
     networks:
       - whalefall_dev_network
     healthcheck:
@@ -43,7 +55,7 @@ services:
     ports:
       - "6379:6379"
     volumes:
-      - ./userdata/redis:/data
+      - whalefall_redis_data:/data
     networks:
       - whalefall_dev_network
     healthcheck:
@@ -70,9 +82,9 @@ services:
       - "80:80"
       - "443:443"
     volumes:
-      - ./nginx/conf.d/whalefall.conf:/etc/nginx/conf.d/default.conf:ro
-      - ./userdata/nginx/logs:/var/log/nginx
-      - ./userdata/nginx/ssl:/etc/nginx/ssl:ro
+      - ./nginx/conf.d/default.conf:/etc/nginx/conf.d/default.conf
+      - whalefall_nginx_logs:/var/log/nginx
+      - whalefall_nginx_ssl:/etc/nginx/ssl
     networks:
       - whalefall_dev_network
     # 基础环境中不依赖whalefall服务
@@ -91,7 +103,7 @@ services:
   whalefall:
     build:
       context: .
-      dockerfile: Dockerfile
+      dockerfile: Dockerfile.dev
       target: development
       args:
         BUILDKIT_INLINE_CACHE: 1
@@ -117,7 +129,7 @@ services:
     env_file:
       - .env
     volumes:
-      - ./userdata:/app/userdata
+      - whalefall_app_data:/app/userdata
       - ./app:/app/app:ro
       - ./migrations:/app/migrations:ro
       - ./sql:/app/sql:ro
