--- a/nginx/conf.d/default.conf
+++ b/nginx/conf.d/default.conf
@@ -1,5 +1,8 @@
+# 鲸落开发环境 Nginx 配置
+# 仅支持HTTP，不启用HTTPS
+
 upstream whalefall_backend {
-    server host.docker.internal:5001;
+    server whalefall_app_dev:5001;
 }
 
 server {
@@ -9,9 +12,12 @@ server {
     # 客户端最大请求体大小
     client_max_body_size 16M;
     
-    # 默认页面（当Flask应用未启动时）
+    # 日志配置
+    access_log /var/log/nginx/access.log;
+    error_log /var/log/nginx/error.log;
+    
+    # 主应用代理
     location / {
-        # 尝试代理到Flask应用
         proxy_pass http://whalefall_backend;
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
@@ -40,36 +46,13 @@ server {
     # 健康检查
     location /health {
         access_log off;
-        return 200 "Nginx is running\n";
+        return 200 "Nginx is running (Dev)\n";
         add_header Content-Type text/plain;
     }
     
-    # 回退页面
+    # 回退页面（当Flask应用不可用时）
     location @fallback {
         return 503 "Service temporarily unavailable. Please wait for Flask application to start.\n";
         add_header Content-Type text/plain;
     }
 }
-
-# HTTPS配置（可选）
-# server {
-#     listen 443 ssl http2;
-#     server_name localhost;
-#     
-#     ssl_certificate /etc/nginx/ssl/cert.pem;
-#     ssl_certificate_key /etc/nginx/ssl/key.pem;
-#     
-#     # SSL配置
-#     ssl_protocols TLSv1.2 TLSv1.3;
-#     ssl_ciphers ECDHE-RSA-AES128-GCM-SHA256:ECDHE-RSA-AES256-GCM-SHA384;
-#     ssl_prefer_server_ciphers off;
-#     
-#     # 其他配置与HTTP相同
-#     location / {
-#         proxy_pass http://whalefall_backend;
-#         proxy_set_header Host $host;
-#         proxy_set_header X-Real-IP $remote_addr;
-#         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-#         proxy_set_header X-Forwarded-Proto $scheme;
-#     }
-# }
