--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -75,9 +75,7 @@ services:
 
   # Nginx反向代理
   nginx:
-    build:
-      context: .
-      dockerfile: Dockerfile.nginx
+    image: nginx:alpine
     container_name: whalefall_nginx_dev
     restart: unless-stopped
     ports:
@@ -88,8 +86,6 @@ services:
       - whalefall_nginx_ssl:/etc/nginx/ssl
     networks:
       - whalefall_dev_network
-    environment:
-      - NGINX_ENV=dev
     # 基础环境中不依赖whalefall服务
     # depends_on:
     #   - whalefall
