--- a/Makefile.prod
+++ b/Makefile.prod
@@ -35,7 +35,7 @@ help:
 	@echo "  nginx-restart       - 重启Nginx服务"
 	@echo "  nginx-logs          - 查看Nginx日志"
 	@echo "  nginx-config        - 查看Nginx配置"
-	@echo "  nginx-reinit-config - 重新初始化Nginx配置"
+	@echo "  nginx-upload-config - 上传Nginx配置"
 	@echo "  nginx-shell         - 进入Nginx容器"
 	@echo ""
 	@echo "SSL证书管理:"
@@ -253,9 +253,9 @@ nginx-config:
 	@echo "⚙️  查看Nginx配置..."
 	@./scripts/nginx/nginx_manager.sh config prod
 
-nginx-reinit-config:
-	@echo "🔄 重新初始化Nginx配置..."
-	@./scripts/nginx/nginx_manager.sh reinit-config prod
+nginx-upload-config:
+	@echo "📤 上传Nginx配置..."
+	@./scripts/nginx/nginx_manager.sh upload-config prod
 
 nginx-shell:
 	@echo "🐚 进入Nginx容器..."
